# migrate_rustdoc_types

./: Cargo.toml
src/migrations/: v42.rs
tests/: main.rs
tests/snapshots/: main__migrate.snap
tests/v44/: v44.json  v44.rs
tools/generate_rustdoc_json/: Cargo.toml
tools/generate_rustdoc_json/src/: discovery.rs  generate.rs  main.rs  toolchains.rs
