[package]
name = "migrate_rustdoc_types"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
pico-args = "0.5.0"

# `rustdoc` JSON deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error propagation and contexts
anyhow = "1.0.98"

# Colored terminal output
anstream = "0.6.18"
anstyle = "1.0.10"

# All supported `rustdoc_types` format versions
rustdoc_types_41 = { version = "0.37", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_42 = { version = "0.38", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_43 = { version = "0.39", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_44 = { version = "0.40", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_45 = { version = "0.41", package = "rustdoc-types", features = ["rustc-hash"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
insta-cmd = "0.6.0"
